# matrix-flight-tracker

./: .env.example  .gitignore  CMakeLists.txt  README.md
scripts/: setup.sh
src/: callsign.h  display.cpp  display.h  flight.cpp  flight.h  flight_api.cpp  flight_api.h  geo.h  main.cpp
